# IASLib

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  IASLib.vcproj.vspscc  IASLib.vsd  IASLib.vssscc  MSSCCPRJ.SCC  README.md  ReadMe.txt  SECURITY.md
.github/workflows/: c-cpp.yml  cmake.yml
IASLib/: ClassDiagram1.cd  IASLib.ncb  IASLib.sln  IASLib.vcproj  IASLib.vcxproj  IASLib.vcxproj.filters  MSSCCPRJ.SCC  UpgradeLog.XML  UpgradeLog.htm
IASLib/Backup/: IASLib.sln
inc/: IASLib.h  IASLibConfig.h  IASLibConfig.h.in
inc/BaseTypes/: Bool.h  DataBlock.h  Date.h  IASLib_String.h  Object.h  Random.h  StringStub.h  StringTokenizer.h  String_.h  String_Copy.h  Uuid.h  Variant.h
inc/Blockchain/: Block.h  Blockchain.h  MerkleNode.h
inc/Collections/: Array.h  Cache.h  CacheItem.h  Collection.h  Hash.h  HashBucket.h  HashSlat.h  IntArray.h  Iterator.h  List.h  Queue.h  SortedArray.h  SparseArray.h  Stack.h  StringArray.h  TCache.h  TCollection.h  TDoubleList.h
inc/Configuration/: Profile.h  Settings.h
inc/Database/: BaseResult.h  BulkCopyConnection.h  Connection.h  ConnectionArray.h  Cursor.h  Database.h  OutParam.h  ResultSet.h  StoredProc.h
inc/Database/Metadata/: DataField.h  DataIndex.h  DataTable.h
inc/Database/MySQL/: mysql_database.h
inc/Database/Oracle/: Ora_Connection.h  Ora_Cursor.h  Ora_Database.h  Ora_ResultSet.h  Ora_StoredProc.h
inc/Database/Sqlite/: Sqlt_Connection.h  Sqlt_Cursor.h  Sqlt_Database.h
inc/Database/Sybase/: Syb_BulkCopyConnection.h  Syb_Connection.h  Syb_Cursor.h  Syb_Database.h  Syb_ResultSet.h  Syb_StoredProc.h
inc/DynamicLibraries/: DynamicLibrary.h
inc/Encryption/: Encrypt.h  Sha256.h
inc/Exceptions/: CollectionException.h  Exception.h  FileException.h  SocketException.h  StreamException.h  StringException.h  ThreadException.h  WindowsSystemException.h  XMLException.h
inc/Files/: Directory.h  DirectoryEntry.h  File.h  FileStat.h  MemMappedFile.h  RWFile.h
inc/JSON/: ArrayNode.h  BinaryNode.h  BooleanNode.h  CollectiveNode.h  JsonDocument.h  JsonNode.h  JsonNodeType.h  JsonParser.h  MissingNode.h  NullNode.h  NumberNode.h  ObjectNode.h  PojoNode.h  ValueNode.h
inc/Logging/: ConsoleLog.h  ContextValue.h  LogContext.h  LogFile.h  LogSink.h  RotatingLogFile.h
inc/MemoryManager/: MemoryBlock.h  MemoryFixedHeap.h  MemoryHeap.h  MemoryManager.h
inc/NetworkServices/: Entity.h  GenericClient.h  GenericHandler.h  GenericListener.h  GenericRequest.h  GenericResponse.h  GenericServer.h  HTTPClient.h  HTTPHeader.h  HTTPHeaderList.h  HTTPResponse.h  HTTPServer.h  Header.h  HeaderList.h  Mail.h  Server.h
inc/NetworkServices/Entities/: NullEntity.h  SdpEntity.h  TextPlainEntity.h
inc/Resources/: Resource.h  ResourceDirectory.h  ResourceFile.h  ResourceFileNode.h  ResourceIndex.h  ResourceNode.h
inc/Sockets/: ClientSocket.h  ClientSocketSource.h  FixedConnectionPool.h  InternetAddress.h  RemoteAddress.h  SafeAddressInfo.h  SecureClientSocket.h  SecureSocket.h  ServerSocket.h  Socket.h  SocketConfig.h  UDPSocket.h
inc/Stats/: CoverageMap.h  Histogram.h
inc/Status/: CPUUsage.h
inc/Streams/: BufferedStream.h  FileStream.h  NullStream.h  SocketStream.h  Stream.h  StringStream.h
inc/Templates/: TArray.h  TCollection.h  TEntry.h  TIterator.h  TMap.h
inc/Threading/: Mutex.h  PooledThread.h  Semaphore.h  ServerThread.h  Thread.h  ThreadMonitor.h  ThreadPool.h  ThreadTask.h
inc/XML/: XMLChunk.h  XMLData.h  XMLDocument.h  XMLElement.h  XMLIndex.h  XMLParser.h  XMLProperty.h
src/BaseTypes/: DataBlock.cpp  Date.cpp  Object.cpp  StringStub.cpp  StringTokenizer.cpp  String_.cpp  String_Copy.cpp  Uuid.cpp  Variant.cpp
src/Blockchain/: Block.cpp  Blockchain.cpp  MerkleNode.cpp
src/Collections/: Array.cpp  Cache.cpp  CacheItem.cpp  Collection.cpp  Hash.cpp  HashBucket.cpp  HashSlat.cpp  IntArray.cpp  List.cpp  Queue.cpp  SortedArray.cpp  SparseArray.cpp  Stack.cpp  StringArray.cpp
src/Configuration/: Profile.cpp  Settings.cpp
src/Database/: BaseResult.cpp  ConnectionArray.cpp  Database.cpp
src/DynamicLibraries/: DynamicLibrary.cpp
src/Encryption/: Sha256.cpp
src/Exceptions/: CollectionException.cpp  Exception.cpp  FileException.cpp  SocketException.cpp  StreamException.cpp  StringException.cpp  ThreadException.cpp  WindowsSystemException.cpp  XMLException.cpp
src/Files/: Directory.cpp  DirectoryEntry.cpp  File.cpp  FileStat.cpp  MemMappedFile.cpp  RWFile.cpp
src/JSON/: ArrayNode.cpp  BinaryNode.cpp  BooleanNode.cpp  JsonNode.cpp  JsonParser.cpp  MissingNode.cpp  ObjectNode.cpp  ValueNode.cpp
src/Logging/: ConsoleLog.cpp  ContextValue.cpp  LogContext.cpp  LogFile.cpp  LogSink.cpp  RotatingLogFile.cpp
src/NetworkServices/: Entity.cpp  GenericClient.cpp  GenericHandler.cpp  GenericListener.cpp  GenericRequest.cpp  GenericResponse.cpp  GenericServer.cpp  HTTPClient.cpp  HTTPHeader.cpp  HTTPHeaderList.cpp  Header.cpp  HeaderList.cpp  Mail.cpp
src/Resources/: Resource.cpp
src/Sockets/: ClientSocket.cpp  InternetAddress.cpp  RemoteAddress.cpp  SafeAddressInfo.cpp  SecureClientSocket.cpp  SecureSocket.cpp  ServerSocket.cpp  Socket.cpp  SocketConfig.cpp  UDPSocket.cpp
src/Stats/: CoverageMap.cpp  Histogram.cpp
src/Status/: CPUUsage.cpp
src/Streams/: BufferedStream.cpp  FileStream.cpp  NullStream.cpp  SocketStream.cpp  Stream.cpp  StringStream.cpp
src/Threading/: Mutex.cpp  PooledThread.cpp  Semaphore.cpp  ServerThread.cpp  Thread.cpp  ThreadMonitor.cpp  ThreadPool.cpp
src/XML/: XMLChunk.cpp  XMLData.cpp  XMLDocument.cpp  XMLElement.cpp  XMLIndex.cpp  XMLProperty.cpp
test/: CMakeLists.txt
test/GetConfig/: GetConfig  GetConfig.cpp  Makefile  stdafx.h
test/GetQueues/: GetQueues.cpp  Makefile  stdafx.cpp
test/ParseMetricData/: Makefile  ParseMetricData  ParseMetricData.cpp  stdafx.h
test/StaticObj/: Makefile  StaticObj.cpp
test/TestXMLDocument/: CMakeLists.txt  DatabaseLayout.xml  Makefile  ReadMe.txt  TestXMLDocument  TestXMLDocument.cpp  TestXMLDocument.vcproj  TestXMLDocument.vcproj.vspscc  stdafx.h  xslspec.xml
test/XER2BER/: 855624709145.xml  Makefile  XER2BER  XER2BER.cpp
(+79 files in other folders)
